--- a/app/src/main/res/layout/activity_imagecap.xml
+++ b/app/src/main/res/layout/activity_imagecap.xml
@@ -419,6 +419,17 @@
             opencv:srcCompat="@android:drawable/ic_menu_delete" />
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/shareMediaButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            opencv:fabSize="mini"
+            opencv:srcCompat="@android:drawable/ic_menu_share"
+            opencv:backgroundTint="@color/mymensorgreendark"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp" />
+
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/shareMediaButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
